src/objects/CRM_WF_Brief__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Area_Solicitante__c</fullName>
        <formula>TEXT (CRM_WF_Campana_Brief__r.CRM_WF_Area_Solicitante__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Área solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_ArtesEG_Aprobados__c</fullName>
        <label>Número artes marketing cloud aprobados</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Silverpop, Email Marketing Cloud, Email Marketing Cloud con cambios</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.CRM_WF_Estatus__c</field>
            <operation>equals</operation>
            <value>Cierre</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_ArtesGM_Aprobados__c</fullName>
        <label>Número de artes desclub aprobados</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Desclub, Email Desclub con cambios</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.CRM_WF_Estatus__c</field>
            <operation>equals</operation>
            <value>Cierre</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Artes_GM__c</fullName>
        <label>Número de artes desclub</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Desclub, Email Desclub con cambios</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Asunto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Asunto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Audiencia_Target__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Audiencia a la que va dirigida la comunicación.

Indicar ciclos de vida o segmentación que se utilizará en la campaña.</inlineHelpText>
        <label>Audiencia (Target)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Beneficio_Oferta__c</fullName>
        <formula>TEXT (CRM_WF_Folio_Del_Beneficio__r.CRM_WF_Beneficio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beneficio / Oferta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Call_To_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call to action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Campana_Brief__c</fullName>
        <label>Nombre de la campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Brief</relationshipLabel>
        <relationshipName>Brief</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CRM_WF_Campana_Digital_Masiva__c</fullName>
        <inlineHelpText>Confirmar si el material es parte de una campaña digital masiva.</inlineHelpText>
        <label>¿Campaña digital masiva?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Canales_de_Comunicacion__c</fullName>
        <formula>IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;ATM&quot;), &quot;ATM; &quot;,null)&amp;  
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Bancomercom&quot;), &quot;Bancomercom; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Bancomer Inf&quot;), &quot;Bancomer Inf; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Bancomer movil&quot;), &quot;Bancomer movil; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Boletín Emp&quot;), &quot;Boletín Emp; &quot;,null)&amp;  
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Cenefa&quot;), &quot;Cenefa; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Correo directo&quot;), &quot;Correo directo; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;EECC&quot;), &quot;EECC; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Email&quot;), &quot;Email; &quot;,null)&amp;  
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Email Individual&quot;), &quot;Email Individual; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Email Multipromociones&quot;), &quot;Email Multipromociones; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Facebook&quot;), &quot;Facebook; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Insertos&quot;), &quot;Insertos; &quot;,null)&amp;  
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;IVR&quot;), &quot;IVR; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Listados&quot;), &quot;Listados; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Marketing Dinámico&quot;), &quot;Marketing Dinámico; &quot;,null)&amp;  
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Mundo TDC&quot;), &quot;Mundo TDC; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Pauta Digital&quot;), &quot;Pauta Digital; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Portal Vida Bancomer&quot;), &quot;Portal Vida Bancomer; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Prensa&quot;), &quot;Prensa; &quot;,null)&amp;  
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Publicación en sitio Descuentos&quot;), &quot;Publicación en sitio Descuentos; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Radio&quot;), &quot;Radio; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Redes Sociales Dirigidas&quot;), &quot;Redes Sociales Dirigidas; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Redes Sociales Masivas&quot;), &quot;Redes Sociales Masivas; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Sdat&quot;), &quot;Sdat; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;SMS&quot;), &quot;SMS; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Telemarketing&quot;), &quot;Telemarketing; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;TPV&quot;), &quot;TPV; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Ventanilla&quot;), &quot;Ventanilla; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Wallet Loyalty Mapa&quot;), &quot;Wallet Loyalty Mapa; &quot;,null)&amp;
IF(INCLUDES( CRM_WF_Campana_Brief__r.CRM_WF_Canales_de_Comunicacion__c , &quot;Wallet Loyalty Push Notification&quot;), &quot;Wallet Loyalty Push Notification; &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canales de comunicación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Causas_De_Rechazo__c</fullName>
        <label>Causas de rechazo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cambio Repentino</fullName>
                </value>
                <value>
                    <fullName>Datos Variables</fullName>
                </value>
                <value>
                    <fullName>Falta de Anexos</fullName>
                </value>
                <value>
                    <fullName>Información Inconsistente</fullName>
                </value>
                <value>
                    <fullName>Legales</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Vigencia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Como_Llaman_A_Sus_Puntos_De_Venta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿Cómo llaman a sus puntos de venta?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Competencia_Directa__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comptencia directa por esos canales o principales competidores</inlineHelpText>
        <label>Competencia directa</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Con_Bbdd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Con BBDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Condicionantes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Condicionantes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Cuentas_Con_Pagina_Tageada__c</fullName>
        <label>¿Cuentas con landing / página taggeada?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Descripcion_del_Mensaje_Central__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe a detalle la oferta, mecánica o dinámica de participación. Ejemplo: El usuario puede obtener 12 MSI al pagar con sus Tarjetas de Crédito Bancomer</inlineHelpText>
        <label>Descripción del mensaje central</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Desde_Brief__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Fecha inicial de la Vigencia de la promoción</inlineHelpText>
        <label>Desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Desea_cancelar_el_Brief__c</fullName>
        <label>¿Desea cancelar el Brief?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Donde_Aplica_El_Beneficio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>En la sucursal, cajeros automáticos, Bancomer.com, Bancomer móvil, tienda en línea, tiendas físicas de los comercios, concesionarias, distribuidores, etc.</inlineHelpText>
        <label>¿Dónde aplica el beneficio u oferta?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Duracion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Duración</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_El_Arte_Requiere_Leyendas_Logos__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>¿El arte requiere leyendas y logos?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Entregables_Plan_De_Medios__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Plan de Medios aprobados con specs.</inlineHelpText>
        <label>Entregables - plan de medios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Entregables__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Tipos de materiales a trabajar para las comunicación de acuerdo a la estrategia generada en MKT</inlineHelpText>
        <label>Entregables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Especificaciones_Para_La_Pauta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Especificaciones para la pauta</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Etapa_Brief__c</fullName>
        <label>Etapa Brief</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solicitud</fullName>
                    <default>true</default>
                    <label>Solicitud</label>
                </value>
                <value>
                    <fullName>Aprobación Solicitud Online</fullName>
                </value>
                <value>
                    <fullName>Vo.Bo. Pixel</fullName>
                </value>
                <value>
                    <fullName>Vo.Bo. Administrador</fullName>
                </value>
                <value>
                    <fullName>Aprobacion Brief</fullName>
                </value>
                <value>
                    <fullName>Planeación y asignación de recursos</fullName>
                </value>
                <value>
                    <fullName>Ejecución</fullName>
                </value>
                <value>
                    <fullName>Generación de Copy</fullName>
                    <label>Ejecución - Generación de Copy</label>
                </value>
                <value>
                    <fullName>Desarrollo pieza HTML</fullName>
                    <label>Ejecución - Desarrollo pieza HTML</label>
                </value>
                <value>
                    <fullName>Proof de propuesta</fullName>
                    <label>Ejecución - Proof de propuesta</label>
                </value>
                <value>
                    <fullName>Revisión interna de propuesta</fullName>
                    <label>Ejecución - Revisión interna de propuesta</label>
                </value>
                <value>
                    <fullName>Subir propuesta para revisión a Proof HQ</fullName>
                    <label>Ejecución - Subir propuesta para revisión a Proof HQ</label>
                </value>
                <value>
                    <fullName>Cierre</fullName>
                </value>
                <value>
                    <fullName>Revisión del material (JM)</fullName>
                    <label>Cierre - Revisión del material (JM)</label>
                </value>
                <value>
                    <fullName>Aprobación del material (SPOC)</fullName>
                    <label>Cierre - Aprobación del material (SPOC)</label>
                </value>
                <value>
                    <fullName>Subir propuesta a servidor</fullName>
                </value>
                <value>
                    <fullName>En Proceso</fullName>
                </value>
                <value>
                    <fullName>Aprobado</fullName>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Etapa_Campana__c</fullName>
        <formula>TEXT (CRM_WF_Campana_Brief__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etapa campaña</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_FIC__c</fullName>
        <formula>CRM_WF_Campana_Brief__r.CRM_WF_FIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_De_Campana__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de lanzamiento de campaña</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_De_Lanzamiento_Por_Canal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de lanzamiento por este canal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_De_Salida_On_Line__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de salida on line</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Solicitud_Brief__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha solicitud</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Solicitud_De_Arte_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha solicitud de arte email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_de_Entrega__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Folio_Del_Beneficio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folio del beneficio</label>
        <referenceTo>CRM_WF_Beneficios__c</referenceTo>
        <relationshipLabel>Brief</relationshipLabel>
        <relationshipName>Brief1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Hasta_Brief__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Fecha final de la Vigencia de la promoción</inlineHelpText>
        <label>Hasta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Kpi_Con_Los_Que_Se_Medira_Envio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Tomando en cuenta los KPIs de la Campaña ¿Cuánto de este monto y/o unidades de venta se harán a través de los canales digitales?</inlineHelpText>
        <label>KPI digital de la campaña</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Kpis_Apertura__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(KPI específico de la Campaña)
Ejemplo: Colocación de 10,000 Créditos, con una facturación incremental de $20 Millones de pesos.</inlineHelpText>
        <label>KPIs de la campaña</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Kpis_Clics__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Interés de la oferta</inlineHelpText>
        <label>KPIs de clics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Legales_De_La_Promocion_Oferta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Si no se tiene un legal, indicar que sólo va la dirección del Banco</inlineHelpText>
        <label>Legales de la promoción /oferta</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Leyenda_De_Personalizacion__c</fullName>
        <label>Leyenda de personalización</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Terminación número afiliación</fullName>
                </value>
                <value>
                    <fullName>Terminación número cliente</fullName>
                </value>
                <value>
                    <fullName>Terminación número contrato</fullName>
                </value>
                <value>
                    <fullName>Terminación número de cuenta</fullName>
                </value>
                <value>
                    <fullName>Terminación número tarjeta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Link_Donde_Debe_Dirigir_El_Cta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ejemplo: Sanborns.com.mx, a la descarga de la aplicación, que llame a Línea Bancomer o mande un mail para solicitar la oferta, etc. Simpre debe de incluir el Traking code</inlineHelpText>
        <label>Link a donde debe dirigir el CTA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Links_Para_Descarga_De_Material__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicar si se envía material adicional</inlineHelpText>
        <label>Links para descarga de material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Mandatorio_Adicional__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Restricción o condicionantes de la promoción
Ejemplo: ¿Debe llevar alguna imagen o logotipo?
¿Algo de la oferta que no se deba omitir?
Aplica solo a nivel Nacional o sólo en CDMX</inlineHelpText>
        <label>Mandatorio adicional</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Marketing_Dinamicos_Aprobados__c</fullName>
        <label>Número de marketing dinámicos aprobados</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Silverpop</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.CRM_WF_Estatus__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Marketing_Dinamicos__c</fullName>
        <label>Número de marketing dinámicos</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Silverpop</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Mas_Legales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Más legales de la promoción oferta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Mecanica_O_Dinamica_De_Part__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ejemplo 1: El usuario debe pagar con su Tarjeta de Crédito Bancomer en sucursales
Ejemplo 2: El descuento se hará válido en la 2da compra al presentar el voucher y pagar con su Tarjeta de Crédito Bancomer
Ejemplo 3: El usuario sólo debe descargar la app</inlineHelpText>
        <label>Mecánica o dinámica de participación</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Del_Solicitante_Brief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nombre del solicitante</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BRIEF1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_De_Artes__c</fullName>
        <label>Número de artes marketing cloud</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Silverpop, Email Marketing Cloud, Email Marketing Cloud con cambios</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_De_Videos__c</fullName>
        <label>Número de videos</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_de_Canales__c</fullName>
        <label>Número de canales</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.CRM_WF_Estatus__c</field>
            <operation>notEqual</operation>
            <value>Cancelado</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Silverpop, Email Marketing Cloud, Email Marketing Cloud con cambios, Email Desclub, Email Desclub con cambios</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_de_Canales_aprobados__c</fullName>
        <label>Número de canales aprobados</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.CRM_WF_Estatus__c</field>
            <operation>equals</operation>
            <value>Cierre</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Silverpop, Email Marketing Cloud, Email Marketing Cloud con cambios, Email Desclub, Email Desclub con cambios, Email Silverpop con cambios</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Objetivos_Del_Negocio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Objetivos del negocio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Objetivos_Digitales_De_La_Campana__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>(KPI del canal digital)
Ejemplo: 5,000 descargas de Wallet</inlineHelpText>
        <label>Objetivos digitales de la campaña</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Observaciones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Observaciones</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Oferta_Promo_O_Prod_A_Impulsar__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Ejemplo 1: El usuario puede obtener 12 MSI al pagar sus Tarjetas de Crédito Bancomer
Ejemplo 2: El usuario obtiene el doble de Puntos Bancomer al pagar con sus Tarjetas de Crédito en Suburbia
Ejemplo 3: El usuario debe descargar la app Bmóvil</inlineHelpText>
        <label>Oferta, promoción o producto a impulsar</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Pautas_Digitales_Aprobadas__c</fullName>
        <label>Número de pautas digitales aprobadas</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Silverpop</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.CRM_WF_Estatus__c</field>
            <operation>equals</operation>
            <value>Aprobado</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Pautas_Digitales__c</fullName>
        <label>Número de pautas digitales</label>
        <summaryFilterItems>
            <field>CRM_WF_Artes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Email Silverpop</value>
        </summaryFilterItems>
        <summaryForeignKey>CRM_WF_Artes__c.CRM_WF_Nombre_Del_Brief__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Periodo_De_Campana__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Periódo de campaña</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Porque__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Recuerda que la landing / página de aterrizaje a donde llega tu campaña debe estar taggeada previo al llenado de tu brief, si tienes dudas de como hacerlo contacta a Gerardo Delgado gerardo.delgado@bbva.com</inlineHelpText>
        <label>¿Por qué no esta taggeada?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Preheader__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preheader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Producto_A_Comunicar__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Producto a comunicar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Propuesta_De_Valor_Del_Comercio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Propuesta de valor del comercio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Propuesta_Unica_De_Valor__c</fullName>
        <formula>CRM_WF_Campana_Brief__r.CRM_WF_Propuesta_De_Valor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propuesta única de valor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Propuesta_Unica_De_Venta_Usp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Diferenciador con la competencia especificar solo una</inlineHelpText>
        <label>Propuesta única de venta (USP)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Responsable_De_Campana_Mkt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable de campaña MKT</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BRIEF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_SIn_Bbdd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIn BBDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Telefono_Donde_Debe_Dirigir_Cta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Teléfono a dónde debe dirigir el CTA</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Terminacion_Numero_Afiliacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terminación número afiliación</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Terminacion_Numero_Cliente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terminación número cliente</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Terminacion_Numero_Contrato__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terminación número contrato</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Terminacion_Numero_Cuenta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terminación número cuenta</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Terminacion_Numero_Tarjeta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terminación número tarjeta</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_De_Area_Solicitante__c</fullName>
        <formula>TEXT (CRM_WF_Campana_Brief__r.CRM_WF_Tipo_De_Area_Solicitante__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de área solicitante</label>
        <type>Text</type>
    </fields>
</CustomObject>